<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="handler"
            type="com.baytrendy.shopifyapp.productsection.activities.ProductList.Handler" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:behavior_hideable="true"
        app:behavior_peekHeight="80dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/sort_icon"
            android:layout_margin="10dp"
            android:onClick="@{handler::openSort}"
            android:tint="@color/white"
            android:focusable="true" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:id="@+id/line"
            app:layout_constraintTop_toBottomOf="@id/sort"
            />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:id="@+id/sortselction"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/line">
            <com.baytrendy.shopifyapp.customviews.MageNativeRadioButton
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                app:radiotype="bold"
                android:id="@+id/atoz"
                android:tag="atoz"
                android:text="@string/atoz"/>
            <com.baytrendy.shopifyapp.customviews.MageNativeRadioButton
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:id="@+id/ztoa"
                app:radiotype="bold"
                android:tag="ztoa"
                android:text="@string/ztoa"/>
            <com.baytrendy.shopifyapp.customviews.MageNativeRadioButton
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:id="@+id/htol"
                app:radiotype="bold"
                android:tag="htol"
                android:text="@string/htol"/>
            <com.baytrendy.shopifyapp.customviews.MageNativeRadioButton
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:id="@+id/ltoh"
                app:radiotype="bold"
                android:tag="ltoh"
                android:text="@string/ltoh"/>
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>